default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Customer-ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>