default/objects/Account/fields/Customer_s_Search_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Search_Request__c</fullName>
    <description>unambiguously to specify by what request the client came to us</description>
    <label>Customer's Search Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>