default/objects/Account/fields/CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup__c</fullName>
    <label>CustomerGroup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>