default/objects/Account/fields/CustomerMaster_AddressID__c.field-meta.xml
<CustomField>
    <fullName>CustomerMaster_AddressID__c</fullName>
    <label>CustomerMaster_AddressID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>