default/objects/Account/fields/CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatus__c</fullName>
    <label>CustomerStatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>