default/objects/Account/fields/CustomShippingState__c.field-meta.xml
<CustomField>
    <fullName>CustomShippingState__c</fullName>
    <label>CustomShippingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>