default/objects/Account/fields/Date_Agreed_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreed_GDPR__c</fullName>
    <description>Date and time when user agreed to tel. contact, email contact or marketing communication with FleetCor (and its divisions).</description>
    <inlineHelpText>GDPR</inlineHelpText>
    <label>Date Agreed (GDPR)</label>
    <type>DateTime</type>
</CustomField>