default/objects/Account/fields/Date_Change_Owner__c.field-meta.xml
<CustomField>
    <fullName>Date_Change_Owner__c</fullName>
    <label>Date of transfer</label>
    <type>Date</type>
</CustomField>