default/objects/Account/fields/Date_first_card_transaction__c.field-meta.xml
<CustomField>
    <fullName>Date_first_card_transaction__c</fullName>
    <label>Date first card transaction</label>
    <type>Date</type>
</CustomField>