default/objects/Account/fields/Date_of_last_contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_contact__c</fullName>
    <label>Date of last contact</label>
    <type>Date</type>
</CustomField>