default/objects/Account/fields/Date_of_transfer_to_service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_transfer_to_service__c</fullName>
    <description>Last Close Date Opportunity on stage "Moved to Start" by MAIN_ID (E2E)</description>
    <label>Date of transfer to service</label>
    <type>Date</type>
</CustomField>