default/objects/Account/fields/Daten_fehlerhaft__c.field-meta.xml
<CustomField>
    <fullName>Daten_fehlerhaft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daten fehlerhaft</label>
    <type>Checkbox</type>
</CustomField>