default/objects/Account/fields/davon_an_Geschaeftskunden__c.field-meta.xml
<CustomField>
    <fullName>davon_an_Geschaeftskunden__c</fullName>
    <label>davon an Geschäftskunden (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>