default/objects/Account/fields/davon_mit_EuroShell_Kompakt_Karte__c.field-meta.xml
<CustomField>
    <fullName>davon_mit_EuroShell_Kompakt_Karte__c</fullName>
    <label>davon mit EuroShell Kompakt Karte ? (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>