default/objects/Account/fields/DG_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>DG_Account_ID__c</fullName>
    <label>DG Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>