default/objects/Account/fields/Disclosure_Group_FO_Account_GOLD__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Group_FO_Account_GOLD__c</fullName>
    <defaultValue>"FCCI0398"</defaultValue>
    <label>Disclosure Group FO Account GOLD</label>
    <length>9</length>
    <type>Text</type>
</CustomField>