default/objects/Account/fields/Disclosure_Group_FO_Account_PLUS__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Group_FO_Account_PLUS__c</fullName>
    <defaultValue>"FCCI0348"</defaultValue>
    <label>Disclosure Group FO Account PLUS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>