default/objects/Account/fields/Disclosure_Group_FO_Account_SILVER__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Group_FO_Account_SILVER__c</fullName>
    <defaultValue>"FCCI0249"</defaultValue>
    <label>Disclosure Group FO Account SILVER</label>
    <length>9</length>
    <type>Text</type>
</CustomField>