default/objects/Account/fields/Discount_too_low__c.field-meta.xml
<CustomField>
    <fullName>Discount_too_low__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount too low</label>
    <type>Checkbox</type>
</CustomField>