default/objects/Account/fields/DM_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_ID__c</fullName>
    <label>DM_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>