default/objects/Account/fields/DM_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Name__c</fullName>
    <label>DM_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>