default/objects/Account/fields/DM_Password__c.field-meta.xml
<CustomField>
    <fullName>DM_Password__c</fullName>
    <label>DM Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>