default/objects/Account/fields/Do_you_know_Fleetcor__c.field-meta.xml
<CustomField>
    <fullName>Do_you_know_Fleetcor__c</fullName>
    <label>Do you know Fleetcor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>