default/objects/Account/fields/DODO_Negotiator__c.field-meta.xml
<CustomField>
    <fullName>DODO_Negotiator__c</fullName>
    <label>DODO Negotiator</label>
    <length>150</length>
    <type>Text</type>
</CustomField>