default/objects/Account/fields/Driver_Card__c.field-meta.xml
<CustomField>
    <fullName>Driver_Card__c</fullName>
    <description>Florian Skiba</description>
    <label>Driver Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>