default/objects/Account/fields/E2E_Special_Marker__c.field-meta.xml
<CustomField>
    <fullName>E2E_Special_Marker__c</fullName>
    <description>Маркер для E2E Ru формы (служебный)
            - для отметки записей на удаление присваиваем значение Delete.</description>
    <label>E2E Special Marker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>