default/objects/Account/fields/E2E_Voucher_sent__c.field-meta.xml
<CustomField>
    <fullName>E2E_Voucher_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E2E Voucher sent</label>
    <type>Checkbox</type>
</CustomField>