default/objects/Account/fields/Einwilligung_Lastschriftverfahren__c.field-meta.xml
<CustomField>
    <fullName>Einwilligung_Lastschriftverfahren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einwilligung Lastschriftverfahren</label>
    <type>Checkbox</type>
</CustomField>