default/objects/Account/fields/Email_address_2__c.field-meta.xml
<CustomField>
    <fullName>Email_address_2__c</fullName>
    <label>Email address 2</label>
    <type>Email</type>
</CustomField>