default/objects/Account/fields/Email_Crif__c.field-meta.xml
<CustomField>
    <fullName>Email_Crif__c</fullName>
    <label>Email (Crif)</label>
    <type>Email</type>
</CustomField>