default/objects/Account/fields/Email_retailer__c.field-meta.xml
<CustomField>
    <fullName>Email_retailer__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>