default/objects/Account/fields/Endvolumen__c.field-meta.xml
<CustomField>
    <fullName>Endvolumen__c</fullName>
    <formula>Start_Date__c +91</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enddatum Volumen</label>
    <type>Date</type>
</CustomField>