default/objects/Account/fields/ENTNR_L__c.field-meta.xml
<CustomField>
    <fullName>ENTNR_L__c</fullName>
    <label>ENTNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>