default/objects/Account/fields/Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume__c</fullName>
    <label>Estimated Volume</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>