default/objects/Account/fields/EUROSIRAS__c.field-meta.xml
<CustomField>
    <fullName>EUROSIRAS__c</fullName>
    <label>EUROSIRAS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>