default/objects/Account/fields/F_M__c.field-meta.xml
<CustomField>
    <fullName>F_M__c</fullName>
    <label>F/M</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>F-M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>