default/objects/Account/fields/Fees_too_high__c.field-meta.xml
<CustomField>
    <fullName>Fees_too_high__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fees too high</label>
    <type>Checkbox</type>
</CustomField>