default/objects/Account/fields/Field_Telematic_Acc__c.field-meta.xml
<CustomField>
    <fullName>Field_Telematic_Acc__c</fullName>
    <label>Telematica of Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>