default/objects/Account/fields/Firmennamen_auf_der_Karte__c.field-meta.xml
<CustomField>
    <fullName>Firmennamen_auf_der_Karte__c</fullName>
    <inlineHelpText>Maximal 25 Zeichen!!</inlineHelpText>
    <label>Firmennamen auf der Karte</label>
    <length>25</length>
    <type>Text</type>
</CustomField>