default/objects/Account/fields/First_Pump_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pump_Date__c</fullName>
    <description>The first date on which the customer used their card to purchase any fuel volume at the pump as collected in GFN.</description>
    <inlineHelpText>The first date on which the customer used their card to purchase any fuel volume at the pump as collected in GFN.</inlineHelpText>
    <label>GFN First Pump Date</label>
    <type>Date</type>
</CustomField>