default/objects/Account/fields/First_Pump_Date_KW__c.field-meta.xml
<CustomField>
    <fullName>First_Pump_Date_KW__c</fullName>
    <label>First Pump Date KW</label>
    <length>4</length>
    <type>Text</type>
</CustomField>