default/objects/Account/fields/ft_week__c.field-meta.xml
<CustomField>
    <fullName>ft_week__c</fullName>
    <description>The first week year and number in which the customer first used their card to pump any fuel volume as recorded in GFN.</description>
    <inlineHelpText>The first week year and number in which the customer first used their card to pump any fuel volume as recorded in GFN.</inlineHelpText>
    <label>GFN FT Week</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>