default/objects/Account/fields/Fuel_station_distance__c.field-meta.xml
<CustomField>
    <fullName>Fuel_station_distance__c</fullName>
    <label>Fuel station distance</label>
    <precision>17</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>