default/objects/Account/fields/FZK__c.field-meta.xml
<CustomField>
    <fullName>FZK__c</fullName>
    <label>FZK</label>
    <length>16</length>
    <type>Text</type>
</CustomField>