default/objects/Account/fields/Gebietsstruktur__c.field-meta.xml
<CustomField>
    <fullName>Gebietsstruktur__c</fullName>
    <label>Gebietsstruktur</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Standortangaben__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Wohngebiet</fullName>
            </value>
            <value>
                <fullName>Gewerbe-/Industriegebiet</fullName>
            </value>
            <value>
                <fullName>Mischgebiet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>