default/objects/Account/fields/General_comments__c.field-meta.xml
<CustomField>
    <fullName>General_comments__c</fullName>
    <description>Nuremberg Team has requested this field to the Accounts with Record Type = Retailer</description>
    <label>General comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>