default/objects/Account/fields/Gesamtanzahl_Fahrzeuge__c.field-meta.xml
<CustomField>
    <fullName>Gesamtanzahl_Fahrzeuge__c</fullName>
    <label>Gesamtanzahl Fahrzeuge</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>