default/objects/Account/fields/Gewuenschte_Prozedur__c.field-meta.xml
<CustomField>
    <fullName>Gewuenschte_Prozedur__c</fullName>
    <label>Gewünschte Prozedur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Papierform</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>beides</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>