default/objects/Account/fields/GFN_Block_Date__c.field-meta.xml
<CustomField>
    <fullName>GFN_Block_Date__c</fullName>
    <description>GFN Customer Block Date</description>
    <label>GFN Block Date</label>
    <type>Date</type>
</CustomField>