default/objects/Account/fields/GFN_Blocked_Cards__c.field-meta.xml
<CustomField>
    <fullName>GFN_Blocked_Cards__c</fullName>
    <label>GFN Blocked Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>