default/objects/Account/fields/GFN_Cancallation_Date__c.field-meta.xml
<CustomField>
    <fullName>GFN_Cancallation_Date__c</fullName>
    <label>GFN Cancallation Date</label>
    <type>Date</type>
</CustomField>