default/objects/Account/fields/GFN_Current_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>GFN_Current_Credit_Limit__c</fullName>
    <label>GFN Current Credit Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>