default/objects/Account/fields/GFN_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>GFN_Customer_Status__c</fullName>
    <label>GFN Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>