default/objects/Account/fields/GFN_Nr__c.field-meta.xml
<CustomField>
    <fullName>GFN_Nr__c</fullName>
    <description>Unique account identifier generated in GFN (Global FleetNet) system</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique account identifier generated in GFN (Global FleetNet) system</inlineHelpText>
    <label>GFN Nr.</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>