default/objects/Account/fields/GFN_Number_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>GFN_Number_of_Cards__c</fullName>
    <label>GFN Number of Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>