default/objects/Account/fields/GFN_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>GFN_Payment_Method__c</fullName>
    <label>GFN Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>