default/objects/Account/fields/gfn_sec_channel__c.field-meta.xml
<CustomField>
    <fullName>gfn_sec_channel__c</fullName>
    <description>Sec Channel as held in GFN for reconciliation reports</description>
    <inlineHelpText>Sec Channel as held in GFN for reconciliation reports</inlineHelpText>
    <label>GFN Sec Channel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>