default/objects/Account/fields/Gr_ndungsjahr__c.field-meta.xml
<CustomField>
    <fullName>Gr_ndungsjahr__c</fullName>
    <label>Gründungsjahr</label>
    <type>Date</type>
</CustomField>