default/objects/Account/fields/Gruende_fuer_Tankkarten__c.field-meta.xml
<CustomField>
    <fullName>Gruende_fuer_Tankkarten__c</fullName>
    <inlineHelpText>Aus Sicht des Ansprechpartners aufnehmen!</inlineHelpText>
    <label>Gründe für Tankkarten? *</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>vereinfachte Abrechnung</fullName>
            </value>
            <value>
                <fullName>Kostenersparnis</fullName>
            </value>
            <value>
                <fullName>bargeldloses Zahlungmittel</fullName>
            </value>
            <value>
                <fullName>Transparenz</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>