default/objects/Account/fields/Gruendungsjahr__c.field-meta.xml
<CustomField>
    <fullName>Gruendungsjahr__c</fullName>
    <label>Gründungsjahr</label>
    <length>4</length>
    <type>Text</type>
</CustomField>