default/objects/Account/fields/Gruendungsjahr_neu__c.field-meta.xml
<CustomField>
    <fullName>Gruendungsjahr_neu__c</fullName>
    <label>Gründungsjahr neu</label>
    <length>4</length>
    <type>Text</type>
</CustomField>