default/objects/Account/fields/GSD_TM_CODE__c.field-meta.xml
<CustomField>
    <fullName>GSD_TM_CODE__c</fullName>
    <label>GSD TM CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>