default/objects/Account/fields/Guarantee_Value__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Value__c</fullName>
    <label>Guarantee Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>