default/objects/Account/fields/Haus_Nr__c.field-meta.xml
<CustomField>
    <fullName>Haus_Nr__c</fullName>
    <label>Haus-Nr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>