default/objects/Account/fields/Hausnummer_E__c.field-meta.xml
<CustomField>
    <fullName>Hausnummer_E__c</fullName>
    <label>Hausnummer *</label>
    <length>50</length>
    <type>Text</type>
</CustomField>