default/objects/Account/fields/Have_objections__c.field-meta.xml
<CustomField>
    <fullName>Have_objections__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be checked if retailer has serious objections against offer/ lead submitting procedure/ bonus scheme</inlineHelpText>
    <label>Have objections</label>
    <type>Checkbox</type>
</CustomField>