default/objects/Account/fields/HQ_of_CM__c.field-meta.xml
<CustomField>
    <fullName>HQ_of_CM__c</fullName>
    <label>HQ of CM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>