default/objects/Account/fields/HR_Abteilung_HRA_HRB_und_HR_Nummer__c.field-meta.xml
<CustomField>
    <fullName>HR_Abteilung_HRA_HRB_und_HR_Nummer__c</fullName>
    <label>HR-Abteilung (HRA/HRB) und HR-Nummer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>