default/objects/Account/fields/IBAN_des_Zahlungspflichtigen__c.field-meta.xml
<CustomField>
    <fullName>IBAN_des_Zahlungspflichtigen__c</fullName>
    <label>IBAN des Zahlungspflichtigen *</label>
    <length>50</length>
    <type>Text</type>
</CustomField>