default/objects/Account/fields/id_Acc_is_not_case_sensitive__c.field-meta.xml
<CustomField>
    <fullName>id_Acc_is_not_case_sensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id Acc is not case sensitive</label>
    <type>Text</type>
</CustomField>