default/objects/Account/fields/Id_Owner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Id_Owner_Lead__c</fullName>
    <description>Ответственный из преобразованного интереса</description>
    <label>Id_Owner_Lead</label>
    <length>18</length>
    <type>Text</type>
</CustomField>