default/objects/Account/fields/Information_received_from__c.field-meta.xml
<CustomField>
    <fullName>Information_received_from__c</fullName>
    <description>Nuremberg Team has requested this change to the Accounts with Record Type = Retailer</description>
    <label>Information received from</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Station employee</fullName>
            </value>
            <value>
                <fullName>Station owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>