default/objects/Account/fields/INN__c.field-meta.xml
<CustomField>
    <fullName>INN__c</fullName>
    <description>Tax Identification Number - For use in Russia</description>
    <inlineHelpText>Идентификационный номер налогоплательщика.
            Должен содержать только цифры:
            12 цифр - ИП;
            10 цифр - юр. лицо.</inlineHelpText>
    <label>INN</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>