default/objects/Account/fields/Interessante_Zielgruppen__c.field-meta.xml
<CustomField>
    <fullName>Interessante_Zielgruppen__c</fullName>
    <inlineHelpText>Aus Sicht des Tankstellenbetreibers!</inlineHelpText>
    <label>Interessante Zielgruppen?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andere</fullName>
            </value>
            <value>
                <fullName>Automobil</fullName>
            </value>
            <value>
                <fullName>Banken</fullName>
            </value>
            <value>
                <fullName>Bauindustrie</fullName>
            </value>
            <value>
                <fullName>Bekleidung</fullName>
            </value>
            <value>
                <fullName>Beratung</fullName>
            </value>
            <value>
                <fullName>Bildung</fullName>
            </value>
            <value>
                <fullName>Chemische Industrie</fullName>
            </value>
            <value>
                <fullName>Elektronik</fullName>
            </value>
            <value>
                <fullName>Energie</fullName>
            </value>
            <value>
                <fullName>Finanzwirtschaft</fullName>
            </value>
            <value>
                <fullName>Gastgewerbe</fullName>
            </value>
            <value>
                <fullName>Gesundheitspflege</fullName>
            </value>
            <value>
                <fullName>Handwerker</fullName>
            </value>
            <value>
                <fullName>Herstellung</fullName>
            </value>
            <value>
                <fullName>Ingenieurwesen</fullName>
            </value>
            <value>
                <fullName>Kommunikationstechnik</fullName>
            </value>
            <value>
                <fullName>Landwirtschaft</fullName>
            </value>
            <value>
                <fullName>Logistik</fullName>
            </value>
            <value>
                <fullName>Maschinenbau</fullName>
            </value>
            <value>
                <fullName>Medien</fullName>
            </value>
            <value>
                <fullName>Not-For-Profit</fullName>
            </value>
            <value>
                <fullName>Regierung</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Versicherung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>