default/objects/Account/fields/Interested_in_cooperation__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_cooperation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in cooperation</label>
    <type>Checkbox</type>
</CustomField>