default/objects/Account/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice Frequency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>