default/objects/Account/fields/Irrelevant_Phones__c.field-meta.xml
<CustomField>
    <fullName>Irrelevant_Phones__c</fullName>
    <description>List of Irrelevant phones for the record and related Contacts</description>
    <label>Irrelevant Phones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>