default/objects/Account/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>