default/objects/Account/fields/Karte_zusenden__c.field-meta.xml
<CustomField>
    <fullName>Karte_zusenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Karte zusenden</label>
    <type>Checkbox</type>
</CustomField>