default/objects/Account/fields/Kartentyp__c.field-meta.xml
<CustomField>
    <fullName>Kartentyp__c</fullName>
    <label>Kartentyp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FlexKarte</fullName>
                <default>true</default>
                <label>FlexKarte</label>
            </value>
            <value>
                <fullName>FlexKarte/Tankkarte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>