default/objects/Account/fields/Know_the_Retailerportal__c.field-meta.xml
<CustomField>
    <fullName>Know_the_Retailerportal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Know the Retailerportal</label>
    <type>Checkbox</type>
</CustomField>