default/objects/Account/fields/Kontoinhaber__c.field-meta.xml
<CustomField>
    <fullName>Kontoinhaber__c</fullName>
    <label>Kontoinhaber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>