default/objects/Account/fields/KPP__c.field-meta.xml
<CustomField>
    <fullName>KPP__c</fullName>
    <description>Please insert a KPP</description>
    <label>KPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>