default/objects/Account/fields/Kraftstoff_Verbrauch__c.field-meta.xml
<CustomField>
    <fullName>Kraftstoff_Verbrauch__c</fullName>
    <label>Kraftstoff-Verbrauch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 300</fullName>
            </value>
            <value>
                <fullName>300-999</fullName>
            </value>
            <value>
                <fullName>1.000-1.999</fullName>
            </value>
            <value>
                <fullName>2.000-2.999</fullName>
            </value>
            <value>
                <fullName>3.000-3.999</fullName>
            </value>
            <value>
                <fullName>4.000-4.999</fullName>
            </value>
            <value>
                <fullName>5.000-7.999</fullName>
            </value>
            <value>
                <fullName>8.000-9.999</fullName>
            </value>
            <value>
                <fullName>10.000-14.999</fullName>
            </value>
            <value>
                <fullName>15.000 und mehr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>