default/objects/Account/fields/Kraftstoffverbrauch_Liter_Monat__c.field-meta.xml
<CustomField>
    <fullName>Kraftstoffverbrauch_Liter_Monat__c</fullName>
    <inlineHelpText>Über alle Karten hinweg!</inlineHelpText>
    <label>Kraftstoffverbrauch L/Monat</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>