default/objects/Account/fields/Kraftstoffverbrauch_Liter_Monat_ALL__c.field-meta.xml
<CustomField>
    <fullName>Kraftstoffverbrauch_Liter_Monat_ALL__c</fullName>
    <label>Kraftstoffverbrauch Liter/Monat</label>
    <summarizedField>Opportunity.Kraftstoffverbrauch_Liter_Monat__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>