default/objects/Account/fields/Kraftstoffverkauf_monatlich__c.field-meta.xml
<CustomField>
    <fullName>Kraftstoffverkauf_monatlich__c</fullName>
    <label>Kraftstoffverkauf monatlich (Liter)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>