default/objects/Account/fields/Kreditlimit_FO_Account__c.field-meta.xml
<CustomField>
    <fullName>Kreditlimit_FO_Account__c</fullName>
    <label>Kreditlimit FO Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>