default/objects/Account/fields/Kreditvolumen__c.field-meta.xml
<CustomField>
    <fullName>Kreditvolumen__c</fullName>
    <formula>Kraftstoffverbrauch_Liter_Monat__c  * 1.4  * 1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wird automatisch aus dem monatlichen Verbrauch errechnet.</inlineHelpText>
    <label>Kreditvolumen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>