default/objects/Account/fields/kundensegment__c.field-meta.xml
<CustomField>
    <fullName>kundensegment__c</fullName>
    <description>Customer Segment as held in GFN for reconciliation reports</description>
    <inlineHelpText>Customer Segment as held in GFN for reconciliation reports</inlineHelpText>
    <label>GFN Customer Segment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>